--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,12 @@ select {
   z-index: 99999;
 }
 
+#userAlertBox {
+  position: absolute;
+  bottom: 14px;
+  z-index: 99999;
+}
+
 .border-primary-top {
   border-top: 2px solid var(--primary);
 }
