--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -57,12 +57,16 @@
   {{/if}}
   {{#if errMessage}}
   {{>error-alert}}
+  {{else if messages.error}}
+  {{>error-alert}}
   {{/if}}
   {{#if alertMessage}}
   {{>success-alert}}
+  {{else if messages.info}}
+  {{>success-alert}}
   {{/if}}
   <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0" id="alertBox">
+    <div class="col-md-4 m-0" id="{{#if user}}userAlertBox{{else}}alertBox{{/if}}">
       <div class="alert alert-success alert-dismissible fade show m-0 mt-5" id="successAlert" role="alert" hidden>
         <div id="successAlertBody"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -72,7 +76,7 @@
     </div>
   </div>
   <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0" id="alertBox">
+    <div class="col-md-4 m-0" id="{{#if user}}userAlertBox{{else}}alertBox{{/if}}">
       <div class="alert alert-danger alert-dismissible fade show m-0 mt-5" id="errorAlert" role="alert" hidden>
         <div id="errorAlertBody"></div>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
