--- a/views/partials/error-alert.hbs
+++ b/views/partials/error-alert.hbs
@@ -1,7 +1,12 @@
 <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0" id="alertBox">
+    <div class="col-md-4 m-0" id="{{#if user}}userAlertBox{{else}}alertBox{{/if}}">
         <div class="alert alert-danger alert-dismissible fade show m-0 mt-5" id="errAlert" role="alert">
-            <strong>!</strong> {{errMessage}}
+            <strong>!</strong> 
+            {{#if messages.error}}
+            {{messages.error}}
+            {{else}}
+            {{errMessage}}
+            {{/if}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
