--- a/views/partials/success-alert.hbs
+++ b/views/partials/success-alert.hbs
@@ -1,6 +1,6 @@
 <div class="row justify-content-center m-0">
     <div class="col-md-4 m-0" id="{{#if user}}userAlertBox{{else}}alertBox{{/if}}">
-        <div class="alert alert-success alert-dismissible fade show m-0 mt-5" id="alert" role="alert">
+        <div class="alert {{#if user}}bg-success text-white{{else}}alert-success{{/if}} alert-dismissible fade show m-0 mt-5" id="alert" role="alert">
             {{#if messages.info}}
             {{messages.info}}
             {{else}}
