Added functions to get totalShows, totalScreens, totalBookings, and paidBookings for displaying in theater panel dashboard

--- a/views/theatre/dashboard.hbs
+++ b/views/theatre/dashboard.hbs
@@ -24,13 +24,13 @@
                             <div class="col-sm-6 pr-sm-2 statistics-grid">
                                 <div class="card card_border border-success-top p-4">
                                     <i class="lnr text-primary">No of Shows</i>
-                                    <h3 class="text-primary number">60</h3>
+                                    <h3 class="text-primary number">{{totalShows}}</h3>
                                 </div>
                             </div>
                             <div class="col-sm-6 pl-sm-2 statistics-grid">
                                 <div class="card card_border border-success-top p-4">
-                                    <i class="lnr text-secondary">Seats Available</i>
-                                    <h3 class="text-secondary number">60</h3>
+                                    <i class="lnr text-secondary">No of Screens</i>
+                                    <h3 class="text-secondary number">{{totalScreens}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -40,13 +40,13 @@
                             <div class="col-sm-6 pr-sm-2 statistics-grid">
                                 <div class="card card_border border-success-top p-4">
                                     <i class="lnr text-success">No of Bookings</i>
-                                    <h3 class="text-success number">43</h3>
+                                    <h3 class="text-success number">{{totalBookings}}</h3>
                                 </div>
                             </div>
                             <div class="col-sm-6 pl-sm-2 statistics-grid">
                                 <div class="card card_border border-success-top p-4">
                                     <i class="lnr text-danger">Paid Bookings</i>
-                                    <h3 class="text-danger number">17</h3>
+                                    <h3 class="text-danger number">{{paidBookings}}</h3>
                                 </div>
                             </div>
                         </div>
