--- a/views/user/my-orders.hbs
+++ b/views/user/my-orders.hbs
@@ -38,6 +38,10 @@
                                                 </span>{{this.seats}}</p>
                                             <p><span class="font-weight-bold">Total Amount :
                                                 </span>Rs.{{this.totalAmount}}</p>
+                                            <p><span class="font-weight-bold">Payment Method :
+                                                </span>{{this.paymentMethod}}</p>
+                                            <p><span class="font-weight-bold">Status :
+                                                </span><span class="text-capitalize text-primary">{{this.status}}</span></p>
                                         </div>
                                     </div>
                                 </div>
