--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -24,13 +24,13 @@
                             <div class="col-sm-6 pr-sm-2 statistics-grid">
                                 <div class="card card_border border-primary-top p-4">
                                     <i class="lnr text-primary">Active Users</i>
-                                    <h3 class="text-primary number">60</h3>
+                                    <h3 class="text-primary number">{{totalUsers}}</h3>
                                 </div>
                             </div>
                             <div class="col-sm-6 pl-sm-2 statistics-grid">
                                 <div class="card card_border border-primary-top p-4">
                                     <i class="lnr text-secondary">Theaters</i>
-                                    <h3 class="text-secondary number">60</h3>
+                                    <h3 class="text-secondary number">{{totalTheaters}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -40,13 +40,13 @@
                             <div class="col-sm-6 pr-sm-2 statistics-grid">
                                 <div class="card card_border border-primary-top p-4">
                                     <i class="lnr text-success">Active Theatre</i>
-                                    <h3 class="text-success number">43</h3>
+                                    <h3 class="text-success number">{{totalActiveTheaters}}</h3>
                                 </div>
                             </div>
                             <div class="col-sm-6 pl-sm-2 statistics-grid">
                                 <div class="card card_border border-primary-top p-4">
                                     <i class="lnr text-danger">On Hold</i>
-                                    <h3 class="text-danger number">17</h3>
+                                    <h3 class="text-danger number">{{totalTheatersOnHold}}</h3>
                                 </div>
                             </div>
                         </div>
