--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,13 +117,14 @@ select {
   border-color: #ffffff;
 }
 
-.reservedSeat::before{
+.reservedSeat::before {
   background-color: #ff0000 !important;
   cursor: not-allowed;
 }
 
 .overlap {
-  position: relative; bottom: 12vh;
+  position: relative;
+  bottom: 12vh;
 }
 
 .shadow-dark {
@@ -158,7 +159,6 @@ select {
   box-shadow: 5px 5px 10px var(--info);
 }
 
-
 .img-container {
   position: relative;
   width: 50%;
@@ -167,12 +167,12 @@ select {
 .overlay-img {
   opacity: 1;
   display: block;
-  transition: .5s ease;
+  transition: 0.5s ease;
   backface-visibility: hidden;
 }
 
 .img-overlay {
-  transition: .5s ease;
+  transition: 0.5s ease;
   opacity: 0;
   position: absolute;
   top: 12.5vh;
