--- a/views/theatre/dashboard.hbs
+++ b/views/theatre/dashboard.hbs
@@ -163,14 +163,16 @@
                                                             <div class="form-group">
                                                                 <label for="ownerName">Owner Name</label>
                                                                 <input type="text" class="form-control"
-                                                                    placeholder="Owner Name" readonly value="{{theatre.ownerName}}"
-                                                                    name="ownerName" id="ownerName">
+                                                                    placeholder="Owner Name" readonly
+                                                                    value="{{theatre.ownerName}}" name="ownerName"
+                                                                    id="ownerName">
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="theatreName">Theatre Name</label>
                                                                 <input type="text" class="form-control"
-                                                                    placeholder="Owner Name" readonly value="{{theatre.theatreName}}"
-                                                                    name="theatreName" id="theatreName">
+                                                                    placeholder="Owner Name" readonly
+                                                                    value="{{theatre.theatreName}}" name="theatreName"
+                                                                    id="theatreName">
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Email address</label>
@@ -181,7 +183,8 @@
                                                             <div class="form-group">
                                                                 <label for="phoneNumber">Phone Number</label>
                                                                 <input type="tel" class="form-control" readonly
-                                                                    value="{{theatre.phoneNumber}}" name="phoneNumber" id="phoneNumber">
+                                                                    value="{{theatre.phoneNumber}}" name="phoneNumber"
+                                                                    id="phoneNumber">
                                                             </div>
                                                             <div class="text-right">
                                                                 <button type="submit"
@@ -196,11 +199,56 @@
                                     </div>
                                     <div class="card">
                                         <div class="card-header bg-white p-0" id="headingTwo">
-                                            <a href="#" class="card__title text-secondary p-3" data-toggle="collapse"
-                                                data-target="#collapseTwo" aria-expanded="false"
-                                                aria-controls="collapseTwo">Change Password</a>
+                                            <a type="button" class="card__title text-secondary p-3"
+                                                data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                                                aria-controls="collapseTwo">Manage Location</a>
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                                            data-parent="#accordionExample">
+                                            <div class="card-body para__style">
+                                                <div class="row justify-content-center">
+                                                    <div class="col-md-6">
+                                                        <div class="row">
+                                                            <div class="col md-6">
+                                                                <div id="map" class="card_shadow"
+                                                                    style="width: 400px; height: 300px;"></div>
+                                                            </div>
+                                                            <div class="col md-6">
+                                                                <form class="mt-3" action="/theatre/update-location"
+                                                                    method="POST">
+                                                                    <div class="form-group">
+                                                                        <label for="longitude">Longitude</label>
+                                                                        <input type="text" name="longitude"
+                                                                            value="{{theatre.location.longitude}}"
+                                                                            class="form-control bg-white" id="longitude"
+                                                                            readonly>
+                                                                    </div>
+                                                                    <div class="form-group">
+                                                                        <label for="latitude">Latitude</label>
+                                                                        <input type="text" name="latitude"
+                                                                            value="{{theatre.location.latitude}}"
+                                                                            class="form-control bg-white" id="latitude"
+                                                                            readonly>
+                                                                    </div>
+                                                                    <div class="text-center">
+                                                                        <button type="submit"
+                                                                            class="btn btn-success rounded-pill btn-sm px-5">Submit</button>
+                                                                    </div>
+                                                                </form>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header bg-white p-0" id="headingTwo">
+                                            <a href="#" class="card__title text-secondary p-3" data-toggle="collapse"
+                                                data-target="#collapseThree" aria-expanded="false"
+                                                aria-controls="collapseThree">Change Password</a>
+                                        </div>
+                                        <div id="collapseThree" class="collapse" aria-labelledby="headingTwo"
                                             data-parent="#accordionExample">
                                             <div class="card-body para__style">
                                                 <div class="row justify-content-center">
@@ -249,3 +297,33 @@
     </div>
     <!-- main content end-->
 </section>
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoidmlzaG51Y3ByYXNhZCIsImEiOiJja2V3NzAxYnIyNWtrMnhtcmN2dG43Ynd3In0.PjtuWzKhZ2IOs-2rjNCcXQ';
+
+    const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
+        center: [76.78, 9.54], // starting position [lng, lat]
+        zoom: 6 // starting zoom
+    });
+
+    var marker = new mapboxgl.Marker()
+        .setLngLat([{{theatre.location.longitude}}, {{theatre.location.latitude}}])
+        .addTo(map);
+
+    map.on('load', function () {
+        map.resize();
+    });
+
+    map.addControl(
+        new MapboxGeocoder({
+            accessToken: mapboxgl.accessToken,
+            mapboxgl: mapboxgl
+        })
+    );
+
+    map.on('click', function (e) {
+        document.getElementById('longitude').value = e.lngLat.wrap().lng;
+        document.getElementById('latitude').value = e.lngLat.wrap().lat;
+    })
+</script>
