Fixed Marker not showing properly in theatre panel when there is no location avilable for that particular theatre
Fixed issue cannot resolve promise when any of  totalShows, totalScreens,  totalBookings or totalPaidBookings returns empty array

--- a/views/theatre/dashboard.hbs
+++ b/views/theatre/dashboard.hbs
@@ -307,9 +307,15 @@
         zoom: 6 // starting zoom
     });
 
-    var marker = new mapboxgl.Marker()
-        .setLngLat([{{theatre.location.longitude}}, {{theatre.location.latitude}}])
+    const lng = document.getElementById('longitude').value
+    const lat = document.getElementById('latitude').value
+
+    if (lng && lat) {
+        console.log('DEFINED', lng, lat)
+        const marker = new mapboxgl.Marker()
+        .setLngLat([lng, lat])
         .addTo(map);
+    }
 
     map.on('load', function () {
         map.resize();
