--- a/views/theatre/dashboard.hbs
+++ b/views/theatre/dashboard.hbs
@@ -210,7 +210,7 @@
                                                     <div class="col-md-6">
                                                         <div class="row">
                                                             <div class="col md-6">
-                                                                <div id="map" class="card_shadow"
+                                                                <div id="locationPicker" class="card_shadow"
                                                                     style="width: 400px; height: 300px;"></div>
                                                             </div>
                                                             <div class="col md-6">
@@ -301,7 +301,7 @@
     mapboxgl.accessToken = 'pk.eyJ1IjoidmlzaG51Y3ByYXNhZCIsImEiOiJja2V3NzAxYnIyNWtrMnhtcmN2dG43Ynd3In0.PjtuWzKhZ2IOs-2rjNCcXQ';
 
     const map = new mapboxgl.Map({
-        container: 'map',
+        container: 'locationPicker',
         style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
         center: [76.78, 9.54], // starting position [lng, lat]
         zoom: 6 // starting zoom
