--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -230,8 +230,7 @@ select {
   top: 0;
   bottom: 0;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
-  overflow-y: scroll;
+  background-color: rgb(255, 255, 255);
   font-family: sans-serif;
   font-size: 0.8em;
   color: #000000;
